refactor: remove ids from images, since they aren't necessary

--- a/index.html
+++ b/index.html
@@ -12,27 +12,27 @@
 <body>
     <main>
         <article class="image-container">
-            <img id="slikaKrave" src="./images/cow.jfif" alt="krava">
+            <img src="./images/cow.jfif" alt="krava">
         </article>
 
         <article class="image-container">
-            <img id="slikaMacke" src="./images/cat.jfif" alt="macka">
+            <img src="./images/cat.jfif" alt="macka">
         </article>
 
         <article class="image-container">
-            <img id="slikaPsa" src="./images/dog.jfif" alt="pas">
+            <img src="./images/dog.jfif" alt="pas">
         </article>
 
         <article class="image-container">
-            <img id="slikaMedveda" src="./images/bear.jfif" alt="medved">
+            <img src="./images/bear.jfif" alt="medved">
         </article>
 
         <article class="image-container">
-            <img id="slikaKonja" src="./images/horse.jfif" alt="konj">
+            <img src="./images/horse.jfif" alt="konj">
         </article>
 
         <article class="image-container">
-            <img id="slikaPevca" src="./images/rooster.jfif" alt="pevac">
+            <img src="./images/rooster.jfif" alt="pevac">
         </article>
     </main>
     <footer>
